# Helix

./: .clang-format  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  benchmark_cuda.cpp  benchmark_cuda_simple.cpp  benchmark_flat.cpp  benchmark_pq.cpp
cuda/: CMakeLists.txt  cuda_flat.cu  cuda_memory.cu  cuda_pq.cu  cuda_simple.cu  cuda_utils.cu
examples/: CMakeLists.txt  basic_usage.cpp
include/helix/: helix.hpp
include/helix/benchmark/: dataset.hpp  metrics.hpp
include/helix/common/: types.hpp  utils.hpp
include/helix/core/: distance.hpp  io.hpp  kmeans.hpp  manifest.hpp  memory.hpp  threading.hpp  vector_utils.hpp
include/helix/cuda/: cuda_flat.hpp  cuda_pq.hpp  cuda_simple.hpp
include/helix/index/: index_base.hpp  index_flat.hpp  index_hnsw.hpp  index_ivf.hpp  index_pq.hpp
include/helix/quantization/: product_quantizer.hpp
python/: CMakeLists.txt  bindings.cpp
src/: CMakeLists.txt
src/benchmark/: dataset.cpp  metrics.cpp
src/common/: version.cpp
src/core/: distance.cpp  io.cpp  kmeans.cpp  manifest.cpp  memory.cpp  threading.cpp  vector_utils.cpp
src/index/: index_flat.cpp  index_hnsw.cpp  index_ivf.cpp  index_pq.cpp
src/quantization/: product_quantizer.cpp
tests/: CMakeLists.txt  test_cuda_basic.cpp  test_cuda_flat.cpp  test_cuda_pq.cpp  test_cuda_simple.cpp  test_dataset.cpp  test_distance.cpp  test_index_flat.cpp  test_index_hnsw.cpp  test_index_ivf.cpp  test_index_pq.cpp  test_kmeans.cpp  test_main.cpp  test_manifest.cpp  test_metrics.cpp  test_product_quantizer.cpp  test_threading.cpp  test_vector_utils.cpp  test_version.cpp
